<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rippe_bg"
    android:orientation="vertical"
    android:divider="@drawable/line"
    android:showDividers="middle"
    >

    <LinearLayout
        android:id="@+id/blue_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@drawable/line"
        android:orientation="vertical"
        android:showDividers="middle|end">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/blue_ly1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/view_clickbg_white"
                android:clickable="true"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/blue_open"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/blue_open"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/blue_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="@color/white">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line"
                    android:background="@drawable/line"
                    android:layout_marginLeft="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/blue_ly2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/view_clickbg_white"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"

                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/blue_devicename"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/blue_t1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/right_arrow"
                    android:textColor="@color/date_color"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/blue_v3"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/blue_ly3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/blue_bind"
                android:textColor="@color/date_color"
                android:textSize="12sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/blue_recycler_bind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:id="@+id/blue_v4"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:visibility="gone"></View>

        <LinearLayout
            android:id="@+id/blue_ly4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/blue_unbind"
                android:textColor="@color/date_color"
                android:textSize="12sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/blue_recycler_find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/blue_ib_serch"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/view_click_roundbg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue_serch"
            android:textColor="@color/date_color"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>
